Implemented the review comments.